docs: aggregate all docs for publishing