@@ -1,53 +1,35 @@
 plugins {
-    id 'org.asciidoctor.jvm.convert'
+    id 'groovy' // For groovydoc task
 }
 
-def asciidoctorAttributes = [
-        copyright            : 'Apache License, Version 2.0',
-        docinfo1             : 'true',
-        doctype              : 'book',
-        encoding             : 'utf-8',
-        icons                : 'font',
-        id                   : project.name + ':' + project.version.toString(),
-        idprefix             : '',
-        idseparator          : '-',
-        lang                 : 'en',
-        linkattrs            : true,
-        numbered             : '',
-        producer             : 'Asciidoctor',
-        revnumber            : project.projectVersion,
-        setanchors           : true,
-        'source-highlighter' : 'prettify',
-        toc                  : 'left',
-        toc2                 : '',
-        toclevels            : '2',
-        projectVersion       : project.projectVersion,
-]
-
-asciidoctor {
-    sourceDir layout.projectDirectory.dir('src/docs')
-    sources {
-        include 'index.adoc'
-    }
-    outputDir = layout.buildDirectory.dir('docs')
-    attributes asciidoctorAttributes
-    executionMode = 'JAVA_EXEC'
-    jvm {
-        jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
-    }
+ext {
+    apiDocsProjects = [
+            'acl-plugin': [
+                    docTitle: "Grails Spring Security ACL Plugin - $projectVersion",
+                    windowTitle: "spring-security-acl $projectVersion API"
+            ]
+    ]
+    asciidoctorAttributes = [
+            copyright            : 'Apache License, Version 2.0',
+            docinfo1             : 'true',
+            doctype              : 'book',
+            encoding             : 'utf-8',
+            icons                : 'font',
+            id                   : project.name + ':' + project.version.toString(),
+            idprefix             : '',
+            idseparator          : '-',
+            lang                 : 'en',
+            linkattrs            : true,
+            numbered             : '',
+            producer             : 'Asciidoctor',
+            revnumber            : project.projectVersion,
+            setanchors           : true,
+            'source-highlighter' : 'prettify',
+            toc                  : 'left',
+            toc2                 : '',
+            toclevels            : '2',
+            projectVersion       : project.projectVersion,
+    ]
 }
 
-tasks.register('docs') {
-    group = 'documentation'
-    dependsOn 'asciidoctor'
-    doLast {
-        File templateFile = layout.projectDirectory.file('src/docs/index.tmpl').asFile
-        File ghPagesFile = layout.buildDirectory.file('docs/ghpages.html').get().asFile
-        ghPagesFile << templateFile.text.replaceAll('@VERSION@', project.version.toString())
-        copy {
-            from layout.projectDirectory.dir('src/docs')
-            into layout.buildDirectory.dir('docs')
-            include '**/*.png'
-        }
-    }
-}
+apply from: rootProject.layout.projectDirectory.file('gradle/docs-config.gradle')
