@@ -1,60 +1,37 @@
 plugins {
-    id 'org.asciidoctor.jvm.convert'
+    id 'groovy' // For groovydoc task
 }
 
-configurations.register('documentation')
-
-dependencies {
-    documentation platform("org.grails:grails-bom:$grailsVersion")
-    documentation 'com.github.javaparser:javaparser-core'
+ext {
+    apiDocsProjects = ['oauth2-plugin']
+    apiDocsProjects = [
+            'oauth2-plugin': [
+                    docTitle: "Grails Spring Security oauth2 Plugin - $projectVersion",
+                    windowTitle: "spring-security-acl $projectVersion API"
+            ]
+    ]
+    asciidoctorAttributes = [
+            projectVersion  	: projectVersion,
+            copyright           : 'Apache License, Version 2.0',
+            docinfo1            : 'true',
+            doctype             : 'book',
+            encoding            : 'utf-8',
+            'front-cover-image'  : 'image:cover.png[Front Cover,800,600]',
+            icons               : 'font',
+            id                  : 'grails-spring-security-oauth2:' + projectVersion,
+            idprefix            : '',
+            idseparator         : '-',
+            lang                : 'en',
+            linkattrs           : true,
+            numbered            : '',
+            producer            : 'Asciidoctor',
+            revnumber           : projectVersion,
+            setanchors          : true,
+            'source-highlighter' : 'prettify',
+            toc                 : 'left',
+            toc2                : '',
+            toclevels           : '2'
+    ]
 }
 
-def asciidoctorAttributes = [
-        projectVersion  	: projectVersion,
-        copyright           : 'Apache License, Version 2.0',
-        docinfo1            : 'true',
-        doctype             : 'book',
-        encoding            : 'utf-8',
-        'front-cover-image'  : 'image:cover.png[Front Cover,800,600]',
-        icons               : 'font',
-        id                  : 'grails-spring-security-oauth2:' + projectVersion,
-        idprefix            : '',
-        idseparator         : '-',
-        lang                : 'en',
-        linkattrs           : true,
-        numbered            : '',
-        producer            : 'Asciidoctor',
-        revnumber           : projectVersion,
-        setanchors          : true,
-        'source-highlighter' : 'prettify',
-        toc                 : 'left',
-        toc2                : '',
-        toclevels           : '2'
-]
-
-asciidoctor {
-    attributes asciidoctorAttributes
-    baseDirFollowsSourceDir()
-    outputDir new File(layout.buildDirectory.asFile.get(), 'docs')
-    sourceDir = file('src/docs')
-    sources {
-        include 'index.adoc'
-    }
-    jvm {
-        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED')
-    }
-}
-
-tasks.register('docs') {
-    description = 'Generates documentation'
-    group = 'documentation'
-    dependsOn 'asciidoctor'
-    mustRunAfter 'build'
-    doLast {
-        new File(layout.buildDirectory.asFile.get(), 'docs/ghpages.html') << file('src/docs/index.tmpl').text.replaceAll('@VERSION@', projectVersion)
-    }
-}
-
-tasks.withType(Groovydoc).configureEach {
-    classpath += configurations.documentation
-}
+apply from: rootProject.layout.projectDirectory.file('gradle/docs-config.gradle')
